# i-dont-like-cooking

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: product-requirements.md
src/idlcooking/: __init__.py  config.py  scheduler.py
src/idlcooking/api/: main.py  schemas.py
src/idlcooking/application/: __init__.py  planning.py
src/idlcooking/bot/: handlers.py  i18n.py  main.py  planning.py
src/idlcooking/domain/: __init__.py  feedback.py  planning.py  profile.py  schedule.py  shopping.py
src/idlcooking/services/: ollama.py  recipe_discovery.py
src/idlcooking/storage/: __init__.py  database.py  repositories.py
tests/: test_application_planning.py  test_bot_main.py  test_bot_planning.py  test_planning.py  test_profile.py  test_recipe_discovery.py  test_schedule.py  test_scheduler.py  test_storage.py
