[project]
name = "i-dont-like-cooking"
version = "0.1.0"
description = "Telegram-first meal planning service for people who do not like cooking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10,<4.0",
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.111,<1.0",
    "pydantic-settings>=2.3,<3.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idlcooking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
